--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,35 @@
 header .logo{
     font-family: Pacifico;
-    font-size: 2em;
-    color: #2aabd2 !important;
+    font-size: 2.3em;
+    color: #feffff !important;
+}
+
+.all{
+    width: 100vw;
+    height: 100vh;
+}
+
+
+
+body {
+    margin:0px;
+}
+
+#fill_screen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    right:0;
+    bottom:0;
+    background-color: #7796ff;
+}
+
+#followup_div {
+    background-color: yellow;
+    height: 500px;
+    width: 100%;
+    position:absolute;
+    top:100%;
 }
