--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,35 +1,30 @@
-header .logo{
+header .logo {
     font-family: Pacifico;
-    font-size: 2.3em;
+    font-size: 2em;
     color: #feffff !important;
 }
 
-.all{
+.all {
     width: 100vw;
     height: 100vh;
 }
 
-.nav-button-top-Fix{
+.nav-button-top-Fix {
     top: 1rem;
 }
 
-.navbar-ul-right {
-}
-
-
-
 body {
-    margin:0px;
+    margin: 0px;
 }
 
-#fill_screen {
+.fill_screen {
     position: absolute;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    right:0;
-    bottom:0;
+    right: 0;
+    bottom: 0;
     background-color: #7796ff;
 }
 
@@ -37,6 +32,31 @@ body {
     background-color: yellow;
     height: 500px;
     width: 100%;
-    position:absolute;
-    top:100%;
+    position: absolute;
+    top: 100%;
+}
+
+.logo-nav {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    list-style: none;
+}
+
+ul li {
+    padding: 2px 5px;
+}
+
+@media (max-width: 576px) {
+    .logo-fix {
+        text-align: center !important;
+    }
 }
