--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 @media (max-width: 576px) {
-    ul {
+    ul.nav {
         margin: 0;
         padding: 0;
         text-align: center !important;
@@ -54,8 +54,8 @@ body {
 }
 
 ul.nav {
-    margin: 0;
-    padding: 0;
+    margin: 0rem;
+    padding: 0rem;
     text-align: left;
     list-style: none;
 }
@@ -67,5 +67,24 @@ ul.nav li {
 @media (max-width: 576px) {
     .logo-fix {
         text-align: center !important;
+    }
+}
+
+
+.myvid {
+    position: fixed;
+    top: 0; right: 0; bottom: 0; left: 0;
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .myvid {
+        width: 100%;
+        height: auto; /* actually taller than viewport */
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    .myvid {
+        width: auto; /* actually wider than viewport */
+        height: 100%;
     }
 }
