--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,12 @@
-header .logo {
+a.logo {
     font-family: Pacifico;
-    font-size: 2em;
+    font-size: 2.3rem;
+    margin-top: -0.8rem !important;
     color: #feffff !important;
+}
+
+.my-nav-backgroung{
+    background-color: #0053ee;
 }
 
 .all {
@@ -17,6 +22,12 @@ body {
     margin: 0px;
 }
 
+.my-1-screen-text-div{
+    position: relative;
+    padding-top: 60vh;
+    padding-left: 3vw;
+}
+
 .fill_screen {
     position: absolute;
     width: 100%;
@@ -25,19 +36,21 @@ body {
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: #7796ff;
 }
 
-#followup_div {
-    background-color: yellow;
+.full_screen {
+    width: 100%;
+    height: 100vh;
+}
 
+.followup_div {
+    background-color: yellow;
     width: 100%;
     position: absolute;
     top: 100%;
 }
 
-.logo-nav {
-    position: relative;
+.my-logo-nav {
     margin-left: auto;
     margin-right: auto;
     padding-right: 15px !important;
