--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,64 +1,84 @@
-a.logo {
-    font-family: Pacifico;
-    font-size: 2.3rem;
-    margin-top: -0.8rem !important;
-    color: #feffff !important;
-}
+#my-id-screen-1 {
 
-.my-nav-backgroung{
-    background-color: #0053ee;
-}
-
-.all {
-    width: 100vw;
-    height: 100vh;
-}
-
-.nav-button-top-Fix {
-    top: 1rem;
-}
-
-body {
-    margin: 0px;
-}
-
-.my-1-screen-text-div{
-    position: relative;
-    padding-top: 60vh;
-    padding-left: 3vw;
-}
-
-.fill_screen {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
 }
 
-.full_screen {
-    width: 100%;
-    height: 100vh;
-}
-
-.followup_div {
-    background-color: yellow;
+#my-id-screen-after-1 {
+    background-color: #EAEAEC;
     width: 100%;
     position: absolute;
     top: 100%;
 }
 
-.my-logo-nav {
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 15px !important;
-    padding-left: 15px !important;
+#my-id-screen-2 {
+    width: 100%;
+    height: 150vh;
+    background: #000c5c;
+    background: -moz-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, #000c5c), color-stop(100%, #eaeaec));
+    background: -webkit-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
+    background: -o-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
+    background: -ms-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
+    background: linear-gradient(to bottom, #000c5c 0%, #eaeaec 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000c5c', endColorstr='#eaeaec', GradientType=0 );
+}
+
+#my-id-screen-3 {
+    background-color: #EAEAEC;
+}
+
+#my-id-screen-4 {
+
+}
+
+#my-id-screen-5 {
+
+}
+
+.pos-a {
+    position: absolute;
 }
 
 @media (max-width: 576px) {
-    ul.nav {
+    .my-logo-fix {
+        text-align: center !important;
+    }
+}
+
+.my-shadow {
+    -webkit-box-shadow: 14px 13px 74px -22px rgba(0, 0, 0, 0.73);
+    -moz-box-shadow: 14px 13px 74px -22px rgba(0, 0, 0, 0.73);
+    box-shadow: 14px 13px 74px -22px rgba(0, 0, 0, 0.73);
+}
+
+.my-margin-5-t-b {
+    margin-bottom: 5vw;
+    margin-top: 5vw;
+}
+
+.my-white-bg {
+    background-color: white !important;
+}
+
+.nav-button-top-Fix {
+    top: 1rem;
+}
+
+.my-1-screen-text-div {
+
+    padding-top: 40vh;
+}
+
+.my-full-screen {
+    width: 100%;
+    height: 100vh;
+}
+/*
+@media (max-width: 576px) {
+    ul.my-ul-fix {
         margin: 0;
         padding: 0;
         text-align: center !important;
@@ -66,36 +86,22 @@ body {
     }
 }
 
-ul.nav {
+ul.my-ul-fix {
     margin: 0rem;
     padding: 0rem;
     text-align: left;
     list-style: none;
 }
 
-ul.nav li {
+ul.my-ul-fix li {
     padding: 2px 5px;
 }
-
-@media (max-width: 576px) {
-    .logo-fix {
-        text-align: center !important;
-    }
-}
-
-
-.myvid {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-.mydiv{
+*/
+.mydiv {
     padding-left: 0;
     padding-right: 0;
     overflow: hidden;
 }
-
 
 .myimg {
     top: 0;
@@ -104,37 +110,27 @@ ul.nav li {
     width: 100%;
 }
 
-.pos-r{position:relative}
-
-@media (min-aspect-ratio: 16/9) {
-    .myvid {
-        width: 100%;
-        height: auto; /* actually taller than viewport */
+@media screen and (max-width: 992px) {
+    .mobile-top {
+        -webkit-box-ordinal-group: 2;
+        order: 1
     }
-}
-@media (max-aspect-ratio: 16/9) {
-    .myvid {
-        width: auto; /* actually wider than viewport */
-        height: 100%;
+
+    .mobile-buttom {
+        -webkit-box-ordinal-group: 3;
+        order: 2
     }
 }
 
-
-@media screen and (max-width: 992px){
-    .mobile-top{
-        -webkit-box-ordinal-group:2;order:1
-    }
-    .mobile-buttom{
-        -webkit-box-ordinal-group:3;order:2
-    }
-}
-
-.my-text-div{
+.my-text-div {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
-.my-head-text{
+
+.my-head-text {
     margin-bottom: 0.1rem
 }
+
+
