--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 #my-id-screen-1 {
-
+    background: #F1F1F1;
     left: 0;
     top: 0;
     right: 0;
@@ -7,23 +7,17 @@
 }
 
 #my-id-screen-after-1 {
-    background-color: #EAEAEC;
+    background: #161616;
     width: 100%;
     position: absolute;
     top: 100%;
 }
 
 #my-id-screen-2 {
+    background: #161616;
     width: 100%;
     height: 150vh;
-    background: #000c5c;
-    background: -moz-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, #000c5c), color-stop(100%, #eaeaec));
-    background: -webkit-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
-    background: -o-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
-    background: -ms-linear-gradient(top, #000c5c 0%, #eaeaec 100%);
-    background: linear-gradient(to bottom, #000c5c 0%, #eaeaec 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000c5c', endColorstr='#eaeaec', GradientType=0 );
+
 }
 
 #my-id-screen-3 {
@@ -42,6 +36,18 @@
     position: absolute;
 }
 
+.pos-r {
+    position: relative;
+}
+
+.pos-f {
+    position: fixed;
+}
+
+.pos-s {
+    position: static;
+}
+
 @media (max-width: 576px) {
     .my-logo-fix {
         text-align: center !important;
@@ -49,14 +55,15 @@
 }
 
 .my-shadow {
-    -webkit-box-shadow: 14px 13px 74px -22px rgba(0, 0, 0, 0.73);
-    -moz-box-shadow: 14px 13px 74px -22px rgba(0, 0, 0, 0.73);
-    box-shadow: 14px 13px 74px -22px rgba(0, 0, 0, 0.73);
+    -webkit-box-shadow: 14px 10px 59px -6px rgba(22,22,22,0.22);
+    -moz-box-shadow: 14px 10px 59px -6px rgba(22,22,22,0.22);
+    box-shadow: 14px 10px 59px -6px rgba(22,22,22,0.22);
 }
 
-.my-margin-5-t-b {
-    margin-bottom: 5vw;
-    margin-top: 5vw;
+.my-big-div-in-3-screen {
+    background-color: #EAEAEC;
+    margin-top: 5vh;
+
 }
 
 .my-white-bg {
@@ -131,6 +138,13 @@ ul.my-ul-fix li {
 
 .my-head-text {
     margin-bottom: 0.1rem
+}
+
+.my-black-div-between-2-and-3{
+    background: #161616;
+    width: 100%;
+    height: 250px;
+
 }
 
 
