--- a/CSS/example.css
+++ b/CSS/example.css
@@ -50,3 +50,14 @@
 body{
     overflow-x: hidden;
 }
+
+
+.v1 {
+    position: absolute;
+    bottom: -100px;
+    left: 0px;
+    width: 400px;
+    height: 200px;
+    transform: skewY(20deg);
+    background: #667b5b;
+}
