--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
 #my-id-screen-2 {
     background: #161616;
     width: 100%;
-    height: 150vh;
+    height: 83vh;
 
 }
 
@@ -144,7 +144,63 @@ ul.my-ul-fix li {
     background: #161616;
     width: 100%;
     height: 250px;
-
 }
+.my-title-div-2screen-Trusted{
+    margin-top: 200px;
+}
+
+.my-font-MS-semibold{
+    font-family: "Montserrat";
+    font-weight:600;
+}
+
+.my-font-MS-medium{
+    font-family: "Montserrat";
+    font-weight:500;
+}
+
+.my-font-MS-regular{
+    font-family: "Montserrat";
+    font-weight:400;
+}
+
+.my-font-MS-light{
+    font-family: "Montserrat";
+    font-weight:300;
+}
+
+.my-font-size-large{
+    font-size: 6rem;
+}
+
+.my-font-size-medium{
+    font-size: 2rem;
+}
+
+.my-font-size-regulary{
+    font-size: 1.5rem
+}
+
+.my-font-size-small-m{
+    font-size: 1rem;
+}
+
+.my-font-size-small-s{
+    font-size: 0.75rem;
+}
+
+.my-color-light{
+    color: #EAEAEC;
+}
+
+.my-color-blue{
+    color: #393E64;
+}
+
+.my-color-black{
+    color: #161616;
+}
+
+
 
 
