--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
 #my-id-screen-2 {
     background: #161616;
     width: 100%;
-    height: 83vh;
+
 
 }
 
@@ -62,7 +62,7 @@
 
 .my-big-div-in-3-screen {
     background-color: #EAEAEC;
-    margin-top: 5vh;
+    margin-top: 50px;
 
 }
 
