--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,10 +88,10 @@
     bottom: 30vh;
 }
 
-@media screen and (max-height: 650px) {
+@media screen and (max-height: 572px) {
     .my-1-screen-text-div {
         position: absolute !important;
-        bottom: 0px;
+        bottom: 2vh;
     }
 }
 
@@ -164,7 +164,7 @@ ul.my-ul-fix li {
 }
 
 .my-title-div-2screen-Trusted {
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .my-font-MS-semibold {
