--- a/CSS/figure.css
+++ b/CSS/figure.css
@@ -1,161 +1,147 @@
 .s1-f1 {
-     z-index: 1;
-     position: absolute;
-     bottom: 0px;
-     left: 50vw;
-     /*right: 447px;*/
-     width: 200px;
-     height: 300px;
-     transform: skew(-10deg);
-     background: #393E64;
- }
+    z-index: 0;
+    position: absolute;
+    bottom: 0px;
+    left: 0vw;
+    /*right: 447px;*/
+    width: 100%;
+    height: 350px;
+    transform: skewY(-10deg);
+    background: #fcef39;
+    background: -moz-linear-gradient(left, #fcef39 0%, # [object Object] 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #fcef39), color-stop(100%, # [object Object]));
+    background: -webkit-linear-gradient(left, #fcef39 0%, # [object Object] 100%);
+    background: -o-linear-gradient(left, #fcef39 0%, # [object Object] 100%);
+    background: -ms-linear-gradient(left, #fcef39 0%, # [object Object] 100%);
+    background: linear-gradient(to right, #fcef39 0%, # [object Object] 100%);
+}
 
-.s1-f2 {
+@media screen and (max-width: 1200px) {
+    .s1-f1 {
+    }
+}
+
+@media screen and (max-width: 968px) {
+    /* its for tablets */
+    .s1-f1 {
+    }
+}
+
+.s2-f1 {
     z-index: 1;
     position: absolute;
-    bottom: -300px;/*написать calc*/
-    left: calc( 50vw + 80px);
-    /*right: 367px;*/
-    width: 200px;
-    height: 600px;
-    transform: skew(10deg);
-    background: #4A5284;
-}
-
-.s1-f3 {
-    z-index: 1;
-    position: absolute;
-    bottom: -300px;/*написать calc*/
-    left: calc( 50vw + 206px );
-    /*right: 242px;*/
-    width: 200px;
-    height: 400px;
-    transform: skew(-20deg);
-    background: #606AA6;
-}
-
-@media screen and (max-width: 992px) {
-    .s1-f1{
-        left: 55vw;
-    }
-    .s1-f2{
-        left: calc( 55vw + 80px);
-    }
-    .s1-f3{
-        display: none;
-    }
-}
-
-@media screen and (max-width:768px) { /* its for tablets */
-    .s1-f1{
-        display: none;
-    }
-    .s1-f2{
-        display: none;
-    }
-    .s1-f3{
-        display: none;
-    }
-}
-
-.s2-f1{
-    z-index: 1;
-    position: absolute;
-    bottom: -100px;
+    top: 190px; /*-624*/
     left: 0px;
-    width: 400px;
-    height: 200px;
-    transform: skewY(20deg);
-    background: #E1E1E1;
+    width: 100%;/*550px;*/
+    height: 330px;
+    transform: skewY(10deg);
+
+    background: #1dc37e;
+    background: -moz-linear-gradient(left, #1dc37e 0%, #158856 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #1dc37e), color-stop(100%, #158856));
+    background: -webkit-linear-gradient(left, #1dc37e 0%, #158856 100%);
+    background: -o-linear-gradient(left, #1dc37e 0%, #158856 100%);
+    background: -ms-linear-gradient(left, #1dc37e 0%, #158856 100%);
+    background: linear-gradient(to right, #1dc37e 0%, #158856 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1dc37e', endColorstr='#158856', GradientType=1 );
+
 }
 
-.s2-f2{
-    z-index: 1;
-    position: absolute;
-    bottom: -267px;
-    left: 0px;
-    width: 400px;
-    height: 200px;
-    transform: skewY(-25deg);
-    background: #bebebe;
-}
-
-.s2-f3{
-    z-index: 1;
-    position: absolute;
-    bottom: -448px;/*-448*/
-    left: 0px;
-    width: 300px;/*300*/
-    height: 200px;
-    transform: skewY(30deg);
-    background: #B0B0B0;
-}
-
-@media screen and (max-width: 992px){
-    .s2-f3{
-        display: none;
+@media screen and (max-width: 768px) {
+    /* its for tablets */
+    .s2-f1 {
+        top: 80px
     }
-
 }
 
-@media screen and (max-width:768px) { /* its for tablets */
-    .s2-f1{
-        width: 300px;
-    }
-    .s2-f2{
-        bottom: -225px;
-        width: 300px;
-    }
+@media screen and (max-width: 576px) {
+    /* its for smartphones */
 
-}
-
-@media screen and (max-width:576px) { /* its for smartphones */
-    .s2-f3{
-        display: none;
-    }
 }
 
 .s3-f1 {
     z-index: 1;
     position: absolute;
-    bottom: -1110px;
-    right: 0px;
-    width: 300px;
-    height: 200px;
-    transform: skewY(-25deg);
-    background: #F8214E;
+    top: 40px;
+    left: 0vw;
+    /*right: 447px;*/
+    width: 100%;
+    height: 300px;
+    transform: skewY(-5deg);
+    background: #b5cece;
+    background: -moz-linear-gradient(left, #b5cece 0%, #608f8f 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #b5cece), color-stop(100%, #608f8f));
+    background: -webkit-linear-gradient(left, #b5cece 0%, #608f8f 100%);
+    background: -o-linear-gradient(left, #b5cece 0%, #608f8f 100%);
+    background: -ms-linear-gradient(left, #b5cece 0%, #608f8f 100%);
+    background: linear-gradient(to right, #b5cece 0%, #608f8f 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5cece', endColorstr='#608f8f', GradientType=1 );
 }
 
-.s3-f2{
+@media screen and (max-width: 768px) {
+    /* its for tablets */
+    .s3-f1 {
+        top: 0px
+    }
+}
+
+@media screen and (max-width: 576px) {
+    /* its for smartphones */
+    .s3-f1 {
+        top: -40px
+    }
+
+}
+
+.s4-f1 {
     z-index: 1;
     position: absolute;
-    bottom: -1250px;
-    right: 0px;
-    width: 300px;
-    height: 200px;
-    transform: skewY(25deg);
-    background: #CD2584;
+    top: 120px; /*-624*/
+    left: 0px;
+    width: 100%;/*550px;*/
+    height: 330px;
+    transform: skewY(15deg);
+
+    background: #f82150;
+    background: -moz-linear-gradient(left, #f82150 0%, #f67243 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #f82150), color-stop(100%, #f67243));
+    background: -webkit-linear-gradient(left, #f82150 0%, #f67243 100%);
+    background: -o-linear-gradient(left, #f82150 0%, #f67243 100%);
+    background: -ms-linear-gradient(left, #f82150 0%, #f67243 100%);
+    background: linear-gradient(to right, #f82150 0%, #f67243 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f82150', endColorstr='#f67243', GradientType=1 );
 }
 
-@media screen and (max-width: 576px){
-    .s3-f1{
-        bottom: -1180px;
-        width: 100vw;
-    }
-    .s3-f2{
-        width: 100vw;
-        bottom: -1300px;
-        display: none;
+@media screen and (max-width: 768px) {
+    /* its for tablets */
+    .s4-f1 {
+        top: 0px
     }
 }
 
-@media screen and (max-width: 340px){
-    .s3-f1{
-        bottom: -1220px;
-        width: 100vw;
+@media screen and (max-width: 576px) {
+    /* its for smartphones */
+    .s4-f1 {
+        top: -100px
     }
-    .s3-f2{
-        display: none;
 
-    }
+}
+
+.s5-f1 {
+    z-index: 1;
+    position: absolute;
+    top: -145px;
+    left: 0vw;
+    /*right: 447px;*/
+    width: 100%;
+    height: 250px;
+    transform: skewY(-12deg);
+    background: #b245f1;
+    background: -moz-linear-gradient(left, #b245f1 0%, #ff318e 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #b245f1), color-stop(100%, #ff318e));
+    background: -webkit-linear-gradient(left, #b245f1 0%, #ff318e 100%);
+    background: -o-linear-gradient(left, #b245f1 0%, #ff318e 100%);
+    background: -ms-linear-gradient(left, #b245f1 0%, #ff318e 100%);
+    background: linear-gradient(to right, #b245f1 0%, #ff318e 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b245f1', endColorstr='#ff318e', GradientType=1 );
 }
