--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,13 @@
+#background {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("pw_maze_white_@2X.png");
+}
+
 #my-id-screen-1 {
-    background: #F1F1F1;
     left: 0;
     top: 0;
     right: 0;
@@ -7,7 +15,6 @@
 }
 
 #my-id-screen-after-1 {
-    background: #161616;
     width: 100%;
     position: absolute;
     top: 100%;
@@ -15,20 +22,49 @@
 
 #my-id-screen-2 {
     background: #161616;
-    width: 100%;
+    z-index: 3;
+    position: relative;
+    height: 1000px;
+}
 
+@media screen and (max-width: 1200px){
+    #my-id-screen-2 {
+        height: 750px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    #my-id-screen-2 {
+        height: 850px;
+    }
 }
 
 #my-id-screen-3 {
-    background-color: #EAEAEC;
+    /*
+        background-color: #EAEAEC;
+        background-image: url("pw_maze_white_@2X.png");*/
 }
 
 #my-id-screen-4 {
-
+    z-index: 1;
+    position: relative;
+    background: #161616;
+    width: 100%;
 }
 
 #my-id-screen-5 {
+    z-index: 0;
+    position: relative;
+    /*
+    background-color: #EAEAEC;
+    background-image: url("pw_maze_white_@2X.png");*/
+}
 
+#my-id-screen-6 {
+    z-index: 1;
+    position: relative;
+    background: #161616;
+    width: 100%;
 }
 
 .pos-a {
@@ -53,24 +89,25 @@
     }
 }
 
-@media screen and (min-width: 576px){
+@media screen and (min-width: 576px) {
     .my-shadow {
-        -webkit-box-shadow: 0px 4px 8px 0 rgba(21,21,21,0.3), 0px 6px 20px 0 rgba(21,21,21,0.3);
-        -moz-box-shadow:  0px 4px 8px 0 rgba(21,21,21,0.3), 0px 6px 20px 0 rgba(21,21,21,0.3);
-        box-shadow:  0px 4px 8px 0 rgba(21,21,21,0.3), 0px 6px 20px 0 rgba(21,21,21,0.3);
+
+        -webkit-box-shadow: -30px -26px 114px -43px rgba(22, 22, 22, 0.32);
+        -moz-box-shadow: -30px -26px 114px -43px rgba(22, 22, 22, 0.32);
+        box-shadow: -30px -26px 114px -43px rgba(22, 22, 22, 0.32);
+        /*
+        -webkit-box-shadow: 0px 4px 8px 0 rgba(21, 21, 21, 0.3), 0px 6px 20px 0 rgba(21, 21, 21, 0.3);
+        -moz-box-shadow: 0px 4px 8px 0 rgba(21, 21, 21, 0.3), 0px 6px 20px 0 rgba(21, 21, 21, 0.3);
+        box-shadow: 0px 4px 8px 0 rgba(21, 21, 21, 0.3), 0px 6px 20px 0 rgba(21, 21, 21, 0.3);*/
     }
 }
 
-
-
 .my-big-div-in-3-screen {
-
     background-color: #EAEAEC;
-
 }
 
 @media screen and (min-width: 992px) {
-    .my-block-960px{
+    .my-block-960px {
         width: 960px;
     }
 }
@@ -85,7 +122,7 @@
 
 .my-1-screen-text-div {
     position: absolute !important;
-    bottom: 30vh;
+    bottom: 15vh;
 }
 
 @media screen and (max-height: 572px) {
@@ -157,14 +194,43 @@ ul.my-ul-fix li {
     margin-bottom: 0.1rem
 }
 
-.my-black-div-between-2-and-3 {
+.my-black-div-between {
+    top: -100px;
     background: #161616;
     width: 100%;
-    height: 250px;
+    height: 50px;
 }
 
-.my-title-div-2screen-Trusted {
-    margin-top: 100px;
+.my-title-div-4screen-Trusted {
+    padding-top: 30vh;
+}
+
+@media screen and (max-width: 576px){
+    .my-title-div-4screen-Trusted {
+        padding-top: 10vh;
+    }
+}
+
+.my-title-div-2screen-WeAreJolla {
+    padding-top: 140px;
+}
+
+@media screen and (max-width: 1200px){
+    .my-title-div-2screen-WeAreJolla {
+        padding-top: 100px;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+    .my-title-div-2screen-WeAreJolla {
+        padding-top: 40px;
+    }
+
+}
+.my-font-MS-bold {
+    font-family: "Montserrat";
+    font-weight: 700;
 }
 
 .my-font-MS-semibold {
@@ -203,6 +269,10 @@ ul.my-ul-fix li {
     font-size: 1.5rem
 }
 
+.my-font-size-regulary-s {
+    font-size: 1.2rem
+}
+
 .my-font-size-small-m {
     font-size: 1rem;
 }
@@ -212,7 +282,8 @@ ul.my-ul-fix li {
 }
 
 .my-color-light {
-    color: #EAEAEC;
+    color: white;
+    /*color: #EAEAEC;*/
 }
 
 .my-color-blue {
@@ -223,47 +294,150 @@ ul.my-ul-fix li {
     color: #161616;
 }
 
-@media screen and (min-width: 1200px){
-    .my-fix-our-works{
+.my-color-black-l {
+    color: #2B2D31;
+}
+
+@media screen and (min-width: 1200px) {
+    .my-fix-our-works {
         padding-left: 90px
     }
 }
 
-@media screen and (max-width: 400px){
-    .my-font-size-large-fix-mobile{
+@media screen and (max-width: 400px) {
+    .my-font-size-large-fix-mobile {
         font-size: 5.5rem !important;
     }
 }
 
-@media screen and (max-width: 330px){
-    .my-font-size-large-fix-mobile{
+@media screen and (max-width: 350px) {
+    .my-font-size-large-fix-mobile {
         font-size: 3.5rem !important;
     }
 
-    .my-font-size-large-fix-mobile-title-1-screen-2{
+    .my-font-size-large-fix-mobile-title-1-screen-2 {
         font-size: 3.5rem !important;
     }
 
-    .my-font-size-large-fix-mobile-title-1-screen-1{
+    .my-font-size-large-fix-mobile-title-1-screen-1 {
         font-size: 1.5rem !important;
     }
 }
 
-@media screen and (max-height: 570px){
-    .my-font-size-large-fix-mobile-title-1-screen-2{
+@media screen and (max-height: 570px) {
+    .my-font-size-large-fix-mobile-title-1-screen-2 {
         font-size: 3.5rem !important;
     }
 
-    .my-font-size-large-fix-mobile-title-1-screen-1{
+    .my-font-size-large-fix-mobile-title-1-screen-1 {
         font-size: 1.5rem !important;
     }
 }
 
-.my-our-works{
+.my-our-works {
     line-height: 4.3rem;
     margin-bottom: 15px;
 }
 
+.photo-team-screen-2 {
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+}
+
+@media screen and (max-width: 992px){
+    .photo-team-screen-2{
+        display: none;
+    }
+
+}
+
+.my-grad {
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    /*
+    background: rgba(22,22,22,1);
+    background: -moz-linear-gradient(top, rgba(22,22,22,1) 0%, rgba(22,22,22,0) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(22,22,22,1)), color-stop(100%, rgba(22,22,22,0)));
+    background: -webkit-linear-gradient(top, rgba(22,22,22,1) 0%, rgba(22,22,22,0) 100%);
+    background: -o-linear-gradient(top, rgba(22,22,22,1) 0%, rgba(22,22,22,0) 100%);
+    background: -ms-linear-gradient(top, rgba(22,22,22,1) 0%, rgba(22,22,22,0) 100%);
+    background: linear-gradient(to bottom, rgba(22,22,22,1) 0%, rgba(22,22,22,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#161616', endColorstr='#161616', GradientType=0 );
+    */
+
+    background-image: -ms-linear-gradient(bottom, rgba(22, 22, 22, 0) 0%, rgba(22, 22, 22, 1) 100%);
+
+    /* Mozilla Firefox */
+    background-image: -moz-linear-gradient(bottom, rgba(22, 22, 22, 0) 0%, rgba(22, 22, 22, 1) 100%);
+
+    /* Opera */
+    background-image: -o-linear-gradient(bottom, rgba(22, 22, 22, 0) 0%, rgba(22, 22, 22, 1) 100%);
+
+    /* Webkit (Safari/Chrome 10) */
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(22, 22, 22, 0)), color-stop(1, rgba(22, 22, 22, 1)));
+
+    /* Webkit (Chrome 11+) */
+    background-image: -webkit-linear-gradient(bottom, rgba(22, 22, 22, 0) 0%, rgba(22, 22, 22, 1) 100%);
+
+    /* W3C Markup, IE10 Release Preview */
+    background-image: linear-gradient(to top, rgba(22, 22, 22, 0) 0%, rgba(22, 22, 22, 1) 100%);
+}
+
+.link {
+    margin: 2vw;
+    bottom: 20px;
+}
+.link:visited{
+    text-decoration: none; /* Убираем подчеркивание */
+    color: #2B2D31;
+}
+
+.link:hover{
+    text-decoration: none; /* Убираем подчеркивание */
+    color: #fff; /* Цвет ссылки при наведении на нее курсора мыши */
+}
+
+a:visited {
+    color: #800080; /* Цвет посещенной ссылки */
+
+}
+
+.footer-1{
+    text-align: left;
+}
+
+.footer-2{
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 
 
+@media screen and (max-width: 992px) {
+    .footer-1{
+        text-align: center;
+    }
+
+    .footer-2{
+        text-align: center;
+        padding-top: 10px;
+    }
+}
+
+
+
+@media screen and (max-width: 1200px) {
+    .man-img{
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .man-div{
+        display: none;
+    }
+}
