--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,11 @@
 #background {
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
-    background-image: url("pw_maze_white_@2X.png");
+    background-image: url("geometry.png");
+    /*pw_maze_white_@2X.png*/
 }
 
 #my-id-screen-1 {
@@ -40,9 +41,9 @@
 }
 
 #my-id-screen-3 {
-    /*
-        background-color: #EAEAEC;
-        background-image: url("pw_maze_white_@2X.png");*/
+    position: relative;
+    background-color: #EAEAEC;
+    background-image: url("geometry.png");
 }
 
 #my-id-screen-4 {
@@ -55,9 +56,8 @@
 #my-id-screen-5 {
     z-index: 0;
     position: relative;
-    /*
     background-color: #EAEAEC;
-    background-image: url("pw_maze_white_@2X.png");*/
+    background-image: url("geometry.png");
 }
 
 #my-id-screen-6 {
@@ -65,6 +65,7 @@
     position: relative;
     background: #161616;
     width: 100%;
+    padding-top: 4vh;
 }
 
 .pos-a {
@@ -341,6 +342,7 @@ ul.my-ul-fix li {
 }
 
 .photo-team-screen-2 {
+    z-index: 0;
     width: 100%;
     position: absolute;
     bottom: 0px;
@@ -403,7 +405,7 @@ ul.my-ul-fix li {
 }
 
 .link-header:hover {
-    text-decoration: none ; /* Убираем подчеркивание */
+    text-decoration: none; /* Убираем подчеркивание */
 
     color: #1a1e34 !important;
 
@@ -420,7 +422,7 @@ ul.my-ul-fix li {
 
 .logo-header:hover {
     text-decoration: none; /* Убираем подчеркивание */
-    color:  #1a1e34 !important;
+    color: #1a1e34 !important;
 }
 
 .link-footer:visited {
